# ros2_bag_to_dataset

./: CMakeLists.txt  README.md  package.xml
include/bag_to_dataset/: bag_to_dataset.hpp
launch/: bag_to_dataset.xml
scripts/: generate_txt.py  gps_csv_to_local_gt.py
src/: bag_to_dataset.cpp
